--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
 
                -->
 
-               <a href="https://t.me/mokiaSOL" target="_blank">
+               <a href="https://t.me/mokiasui" target="_blank">
                 <svg xmlns="http://www.w3.org/2000/svg" x="0px" y="0px" width="40" height="40" viewBox="0,0,256,256">
                   <g fill="#ffffff" fill-rule="nonzero" stroke="none" stroke-width="1" stroke-linecap="butt"
                     stroke-linejoin="miter" stroke-miterlimit="10" stroke-dasharray="" stroke-dashoffset="0"
@@ -91,7 +91,7 @@
               </a>
       
               <!-- twitter tu vai colocar o link logo no HREF, entre as aspas -->
-              <a href="https://x.com/mokiasol" target="_blank">
+              <a href="https://x.com/mokiasui" target="_blank">
                 <svg xmlns="http://www.w3.org/2000/svg" x="0px" y="0px" width="40" height="40" viewBox="0 0 50 50"
                   fill=#ffffff>
                   <path
