--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   <meta name="author" content="" />
   <link rel="shortcut icon" href="images/tokia.png" type="">
 
-  <title> MOKIA </title>
+  <title> MOKIA AI </title>
 
   <link rel="stylesheet" type="text/css" href="css/bootstrap.css" />
 
@@ -49,7 +49,7 @@
         <nav class="navbar navbar-expand-lg custom_nav-container ">
           <a class="navbar-brand" href="index.html">
             <span>
-              MOKIA
+              MOKIA AI
             </span>
           </a>
 
@@ -76,7 +76,7 @@
 
                -->
 
-               <a href="https://t.me/mokiasui" target="_blank">
+               <a href="https://t.me/mokiaaiportal" target="_blank">
                 <svg xmlns="http://www.w3.org/2000/svg" x="0px" y="0px" width="40" height="40" viewBox="0,0,256,256">
                   <g fill="#ffffff" fill-rule="nonzero" stroke="none" stroke-width="1" stroke-linecap="butt"
                     stroke-linejoin="miter" stroke-miterlimit="10" stroke-dasharray="" stroke-dashoffset="0"
@@ -91,7 +91,7 @@
               </a>
       
               <!-- twitter tu vai colocar o link logo no HREF, entre as aspas -->
-              <a href="https://x.com/mokiasui" target="_blank">
+              <a href="https://x.com/mokiaai" target="_blank">
                 <svg xmlns="http://www.w3.org/2000/svg" x="0px" y="0px" width="40" height="40" viewBox="0 0 50 50"
                   fill=#ffffff>
                   <path
@@ -158,7 +158,7 @@
                       $MOKIA <br>
                     </h1>
                     <h2 style="color: white !important;">
-                      Based on the world's most legendary and unbreakable brand, $MOKIA is here to stay as it is, unbreakable. Our goal is to make history so everyone can benefit from MOKIA.
+                      Based on the world's most legendary and unbreakable brand, $MOKIAAI is here to stay as it is, unbreakable. Our goal is to make history so everyone can benefit from MOKIA.
                     </h2>
                     
                   </div>
